--- a/www/css/cssf-base.css
+++ b/www/css/cssf-base.css
@@ -152,9 +152,9 @@ img.f-right { margin-left: 1em; }
 .content legend { margin-top: -1px; padding-bottom: 1em; font-size: 1.1em; font-weight: bold; }
 
 .content .f-row { overflow: hidden; margin-bottom: .5em; }
-.content label { float: left; text-align: right; width: 17%; padding: 0 10px; }
-.content .f-inputs { padding-left: 25%; }
-.content .registr { padding-left: 10%; }
+.content label { float: left; text-align: right; width: auto; padding: 0 10px; }
+.content .f-inputs { padding-left: 42%; }
+.content .registr { padding-left: 17%; }
 
 .f-actions { padding-top: 1em; border-top: 1px solid #ccc; }
 .pick-date { margin-bottom:10px; }
