--- a/www/css/main.css
+++ b/www/css/main.css
@@ -19,9 +19,10 @@ dfn {
 
 
 #container{
-    width:800px; 
+    width:900px; 
     margin:0 auto; 
-    padding-top:30px;
+    padding:30px 0 30px 0;
+    overflow:hidden;
 }
 
 #container h1{
@@ -30,12 +31,27 @@ dfn {
 
 #body {
     float: left;
-    width: 500px;
+    width: 390px;
     text-align: center;
 }
 
 #sidebar {
-    margin-left: 525px;
+    float:left;
+    width:450px;
+}
+
+#sidebar ul {
+    float:left;
+    width:250px;
+}
+
+#switch_lang {
+    display:inline-block;
+}
+
+#letsplay_form {
+    float:left;
+    width:150px;
 }
 
 #body table{
@@ -48,7 +64,7 @@ dfn {
     border: 1px solid #000;
     width: 50px;
     height: 50px;
-    
+    background: #fff;
 }
 
 #sidebar .free{
@@ -62,6 +78,8 @@ dfn {
 #body .errors{
     color: #E13300;
     margin-top: 50px;
+    background:#fff;
+    line-height:30px;
 }
 
 #game_field .cross{
@@ -93,6 +111,26 @@ dfn {
     padding-top: 15px;
 }
 
-.step li{
-    padding: 5px;
+.game_field {
+    margin: 20px 0 20px 0;
+    padding: 40px 0 40px 0;
+    overflow: hidden;
+    border: 0.5px dotted #000;
+    border-radius: 10px;
+    height: 600px;
 }
+
+.game_field h3{
+    margin: 20px 0 20px 0;
+}
+
+#step_0, 
+#step_1,
+#step_2{
+    font-weight:bold;
+}
+
+#letsplay{
+    width: 146px;
+}
+
